# sheogorath-node

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
pallets/ipfs/: Cargo.toml
pallets/ipfs/src/: interface.rs  lib.rs
pallets/nft/: Cargo.toml
pallets/nft/src/: interface.rs  lib.rs  nft.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
