[package]
name = 'nft-platform'
version = '3.0.0-monthly-2021-10'
description = 'A fresh FRAME-based Substrate node, ready for hacking.'
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
homepage = 'https://substrate.dev'
edition = '2018'
license = 'Unlicense'
publish = false
repository = 'https://github.com/timoth-y/substrate-nft'
build = 'build.rs'

[[bin]]
name = 'nft-platform'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "node-template"

[dependencies.nft-platform-runtime]
path = '../runtime'
version = '3.0.0-monthly-2021-10'

[dependencies]
ipfs = { git = "https://github.com/rs-ipfs/rust-ipfs"}
structopt = "0.3.8"

sc-cli = { version = "0.10.0-dev", path = "../../substrate-ipfs/client/cli", features = ["wasmtime"] }
sp-core = { version = "4.0.0-dev", path = "../../substrate-ipfs/primitives/core" }
sc-executor = { version = "0.10.0-dev", path = "../../substrate-ipfs/client/executor", features = ["wasmtime"] }
sc-service = { version = "0.10.0-dev", path = "../../substrate-ipfs/client/service", features = ["wasmtime"] }
sc-telemetry = { version = "4.0.0-dev", path = "../../substrate-ipfs/client/telemetry" }
sc-keystore = { version = "4.0.0-dev", path = "../../substrate-ipfs/client/keystore" }
sc-transaction-pool = { version = "4.0.0-dev", path = "../../substrate-ipfs/client/transaction-pool" }
sc-transaction-pool-api = { version = "4.0.0-dev", path = "../../substrate-ipfs/client/transaction-pool/api" }
sc-consensus-aura = { version = "0.10.0-dev", path = "../../substrate-ipfs/client/consensus/aura" }
sp-consensus-aura = { version = "0.10.0-dev", path = "../../substrate-ipfs/primitives/consensus/aura" }
sp-consensus = { version = "0.10.0-dev", path = "../../substrate-ipfs/primitives/consensus/common" }
sc-consensus = { version = "0.10.0-dev", path = "../../substrate-ipfs/client/consensus/common" }
sc-finality-grandpa = { version = "0.10.0-dev", path = "../../substrate-ipfs/client/finality-grandpa" }
sp-finality-grandpa = { version = "4.0.0-dev", path = "../../substrate-ipfs/primitives/finality-grandpa" }
sc-client-api = { version = "4.0.0-dev", path = "../../substrate-ipfs/client/api" }
sp-runtime = { version = "4.0.0-dev", path = "../../substrate-ipfs/primitives/runtime" }
sp-timestamp = { version = "4.0.0-dev", path = "../../substrate-ipfs/primitives/timestamp" }

# These dependencies are used for the node template's RPCs
jsonrpc-core = "18.0.0"
sc-rpc = { version = "4.0.0-dev", path = "../../substrate-ipfs/client/rpc" }
sp-api = { version = "4.0.0-dev", path = "../../substrate-ipfs/primitives/api" }
sc-rpc-api = { version = "0.10.0-dev", path = "../../substrate-ipfs/client/rpc-api" }
sp-blockchain = { version = "4.0.0-dev", path = "../../substrate-ipfs/primitives/blockchain" }
sp-block-builder = { version = "4.0.0-dev", path = "../../substrate-ipfs/primitives/block-builder" }
sc-basic-authorship = { version = "0.10.0-dev", path = "../../substrate-ipfs/client/basic-authorship" }
substrate-frame-rpc-system = { version = "4.0.0-dev", path = "../../substrate-ipfs/utils/frame/rpc/system" }
pallet-transaction-payment-rpc = { version = "4.0.0-dev", path = "../../substrate-ipfs/frame/transaction-payment/rpc/" }

# These dependencies are used for runtime benchmarking
frame-benchmarking = { version = "4.0.0-dev", path = "../../substrate-ipfs/frame/benchmarking" }
frame-benchmarking-cli = { version = "4.0.0-dev", path = "../../substrate-ipfs/utils/frame/benchmarking-cli" }

node-template-runtime = { version = "3.0.0", path = "../runtime" }

[build-dependencies]
substrate-build-script-utils = { version = "3.0.0", path = "../../substrate-ipfs/utils/build-script-utils" }

[features]
default = []
runtime-benchmarks = [
	"node-template-runtime/runtime-benchmarks",
]
