[package]
name = 'nft-platform-runtime'
version = '3.0.0-monthly-2021-10'
description = 'A fresh FRAME-based Substrate runtime, ready for hacking.'
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
homepage = 'https://substrate.dev'
edition = '2018'
license = 'Unlicense'
publish = false
repository = 'https://github.com/timoth-y/substrate-nft'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
log = "0.4.14"
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }

pallet-aura = { version = "4.0.0-dev", default-features = false, path = "../../substrate-ipfs/frame/aura" }
pallet-balances = { version = "4.0.0-dev", default-features = false, path = "../../substrate-ipfs/frame/balances" }
frame-support = { version = "4.0.0-dev", default-features = false, path = "../../substrate-ipfs/frame/support" }
pallet-grandpa = { version = "4.0.0-dev", default-features = false, path = "../../substrate-ipfs/frame/grandpa" }
pallet-randomness-collective-flip = { version = "4.0.0-dev", default-features = false, path = "../../substrate-ipfs/frame/randomness-collective-flip" }
pallet-sudo = { version = "4.0.0-dev", default-features = false, path = "../../substrate-ipfs/frame/sudo" }
frame-system = { version = "4.0.0-dev", default-features = false, path = "../../substrate-ipfs/frame/system" }
pallet-timestamp = { version = "4.0.0-dev", default-features = false, path = "../../substrate-ipfs/frame/timestamp" }
pallet-transaction-payment = { version = "4.0.0-dev", default-features = false, path = "../../substrate-ipfs/frame/transaction-payment" }
frame-executive = { version = "4.0.0-dev", default-features = false, path = "../../substrate-ipfs/frame/executive" }
sp-api = { version = "4.0.0-dev", default-features = false, path = "../../substrate-ipfs/primitives/api" }
sp-block-builder = { path = "../../substrate-ipfs/primitives/block-builder", default-features = false, version = "4.0.0-dev" }
sp-consensus-aura = { version = "0.10.0-dev", default-features = false, path = "../../substrate-ipfs/primitives/consensus/aura" }
sp-core = { version = "4.0.0-dev", default-features = false, path = "../../substrate-ipfs/primitives/core" }
sp-inherents = { path = "../../substrate-ipfs/primitives/inherents", default-features = false, version = "4.0.0-dev" }
sp-offchain = { version = "4.0.0-dev", default-features = false, path = "../../substrate-ipfs/primitives/offchain" }
sp-runtime = { version = "4.0.0-dev", default-features = false, path = "../../substrate-ipfs/primitives/runtime" }
sp-session = { version = "4.0.0-dev", default-features = false, path = "../../substrate-ipfs/primitives/session" }
sp-std = { version = "4.0.0-dev", default-features = false, path = "../../substrate-ipfs/primitives/std" }
sp-transaction-pool = { version = "4.0.0-dev", default-features = false, path = "../../substrate-ipfs/primitives/transaction-pool" }
sp-version = { version = "4.0.0-dev", default-features = false, path = "../../substrate-ipfs/primitives/version" }

# Used for the node template's RPCs
frame-system-rpc-runtime-api = { version = "4.0.0-dev", default-features = false, path = "../../substrate-ipfs/frame/system/rpc/runtime-api/" }
pallet-transaction-payment-rpc-runtime-api = { version = "4.0.0-dev", default-features = false, path = "../../substrate-ipfs/frame/transaction-payment/rpc/runtime-api/" }

# Used for runtime benchmarking
frame-benchmarking = { version = "4.0.0-dev", default-features = false, path = "../../substrate-ipfs/frame/benchmarking", optional = true }
frame-system-benchmarking = { version = "4.0.0-dev", default-features = false, path = "../../substrate-ipfs/frame/system/benchmarking", optional = true }
hex-literal = { version = "0.3.1", optional = true }

# Custom pallets
pallet-nft = { version = "0.0.1", default-features = false, path = "../pallets/nft" }
pallet-ipfs = { version = "0.0.1", default-features = false, path = "../pallets/ipfs" }

[build-dependencies]
substrate-wasm-builder = { version = "5.0.0-dev", path = "../../substrate-ipfs/utils/wasm-builder" }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"pallet-aura/std",
	"pallet-balances/std",
	"pallet-grandpa/std",
	"pallet-randomness-collective-flip/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"pallet-nft/std",
	"pallet-ipfs/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking",
	"frame-system/runtime-benchmarks",
	"hex-literal",
	"sp-runtime/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-nft/runtime-benchmarks",
	"pallet-ipfs/runtime-benchmarks",
]
