[package]
name = 'pallet-nft'
version = '0.0.1'
description = 'FRAME pallet template for defining custom runtime logic.'
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
homepage = 'https://substrate.dev'
edition = '2018'
license = 'MIT'
publish = false
repository = 'https://github.com/timoth-y/substrate-nft'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = [
	"derive",
] }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
frame-support = { default-features = false, version = "4.0.0-dev", path = "../../../substrate-ipfs/frame/support" }
frame-system = { default-features = false, version = "4.0.0-dev", path = "../../../substrate-ipfs/frame/system" }
frame-benchmarking = { default-features = false, version = "4.0.0-dev", path = "../../../substrate-ipfs/frame/benchmarking", optional = true }
sp-std = { version = "4.0.0-dev", default-features = false, path = "../../../substrate-ipfs/primitives/std" }
pallet-ipfs = { version = "0.0.1", default-features = false, path = "../ipfs" }

[dev-dependencies]
frame-system = { default-features = false, version = "4.0.0-dev", path = "../../../substrate-ipfs/frame/system" }
sp-core = { default-features = false, version = "4.0.0-dev", path = "../../../substrate-ipfs/primitives/core" }
sp-io = { default-features = false, version = "4.0.0-dev", path = "../../../substrate-ipfs/primitives/io" }
sp-runtime = { default-features = false, version = "4.0.0-dev", path = "../../../substrate-ipfs/primitives/runtime" }


[features]
default = ['std']
std = [
	'codec/std',
	'scale-info/std',
	'frame-support/std',
	'frame-system/std',
	'frame-benchmarking/std',
	'frame-system/std',
	'sp-io/std',
	'sp-std/std',
	"pallet-ipfs/std"
]

runtime-benchmarks = ["frame-benchmarking"]
try-runtime = ["frame-support/try-runtime"]
